--- a/css/01-selectors.css
+++ b/css/01-selectors.css
@@ -37,7 +37,7 @@ td {
 }
 
 /* select all elements of type 'tr' with class 'second' */
-tr.second {
+.row.second {
   color: var(--red);
 }
 
@@ -61,24 +61,24 @@ tr.second {
 }
 
 /* general sibling selector */
-.second ~ tr {
+.second ~ .row {
   color: var(--orange);
 }
 
 /* direct sibling selector */
 /* overrides previous rule */
-.fourth + tr {
+.fourth + .row {
   color: var(--green);
 }
 
 /************* Pseudo-classes and Pseudo-Elements *************/
 
 /* pseudo-class selector */
-tr:hover {
+.row:hover {
   background-color: rgba(139, 0, 0, 0.1);
 }
 
 /* pseudo-class and pseudo-element selector */
-tr > td:first-of-type::first-letter {
+.row > td:first-of-type::first-letter {
   font-size: 1.5em;
 }
